# Litchi

./: .clang-format  .gdbinit  .gdbinit.cli  .gitignore  CMakeLists.txt  CNAME  Makefile  README.md  _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _c_make_rule_hashes_8txt.html  _r_e_a_d_m_e_8md.html  _target_directories_8txt.html  annotated.html  annotated_dup.js  boot_2_c_make_files_2boot_8elf_8dir_2link_8txt.html  boot_2_c_make_lists_8txt.html  classes.html  color_8c.html  color_8c.js  color_8c__incl.map  color_8c__incl.md5  color_8c_source.html  color_8h.html  color_8h.js  color_8h__dep__incl.map  color_8h__dep__incl.md5  color_8h_source.html  console_8cc.html  console_8cc.js  console_8cc__incl.map  console_8cc__incl.md5  console_8cc_source.html  console_8hh.html  console_8hh.js  console_8hh__dep__incl.map  (+839 more)
.github/workflows/: build.yml  docs.yml
boot/: CMakeLists.txt  boot.S  main.c
bootable/: bootable.nasm
conf/: Doxyfile.in  doxygen.cmake  dump.cmake  macros.cmake  ptargets.cmake  toolchain.cmake
image/: litchi.img
include/: assert.h  color.h  cstdout.h  ctype.h  elf.h  elf64.h  memlayout.h  mmu.h  panic.hpp  pckbd.h  random.hh  result.hh  stdin.h  stdin.hh  stdin.hpp  stdio.h  stdio.hh  stdio.hpp  stdout.h  stdout.hh  stdout.hpp  string.h  string.hh  string.hpp  syscall.hh  task.hh  trap.hh  types.h  vargs.h  vargs.hh  vargs.hpp  x64.h  x86.h
kernel/: CMakeLists.txt  assert.c  assert.cc  console.c  console.cc  console.h  console.hh  console.hpp  embuser.S  entry.S  entrypgdir.c  gdt.c  init.c  init.cc  irqentry.S  kdebug.cc  kdebug.h  kdebug.hh  kdebug.hpp  knlast.inc  ksyscall.cc  ksyscall.hh  monitor.c  monitor.cc  monitor.h  monitor.hh  monitor.hpp  monitorxx.cc  monitorxx.cpp  mp.cc  mp.hh  panic.cc  panic.hh  pckbd.c  pckbd.h  pmap.c  pmap.cc  pmap.h  pmap.hpp  printf.c  (+16 more)
lib/: CMakeLists.txt  color.c  ctype.c  exception.cc  printfmt.c  printfmt.cc  random.cc  string.c  string.cc  strtol.cc
old/: boot.asm  loader.asm
old2/: Makefile  grub.img
old2/src/include/: assert.h  common.h  console.h  printl.h
old2/src/kernel/: common.c
old2/src/libs/: console.c  printl.c  string.c
old_litchis/old/: fat12.inc
old_litchis/old2/src/include/: string.h
old_litchis/old2/src/kernel/: entry.c
old_litchis/old2/src/scripts/: kernel.ld
old_litchis/old2/src/tests/: test.c
scripts/: irq_gen.py  kernel.ld  user.ld
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_10.js  defines_11.js  defines_12.js  defines_13.js  defines_14.js  (+118 more)
src/: boot  boot.asm  bootable.asm  ckernel.c  fat12.inc  kernel.asm  loader.asm  types.h
src/include/: assert.h  common.h  console.h  print.h  types.h  vargs.h
src/kernel/: common.c  entry.c
src/libs/: assert.c  console.c  print.c  string.c
src/loader/: nloader.asm  nloader.s
src/scripts/: kernel.ld
src/tests/: test.c  test.h
user/: CMakeLists.txt  hello.cc  stdlib.hh
user/entry/: libmain.cc  uentry.S  umain.cc
user/lib/: printf.cc  readline.cc
